--- a/portfoliogrid/css/style.css
+++ b/portfoliogrid/css/style.css
@@ -2,3 +2,18 @@
   width: 100%;
   height: 100%;
 }
+
+#main-header .port-item {
+  width: 30%;
+}
+
+#main-header .port-item:hover {
+  opacity: 80%;
+  cursor: pointer;
+}
+
+@media(min-width: 1199px) {
+  .port-item{
+    padding: 4em !important;
+  }
+}
